Refactor CAgileParentRelation and related services to improve parent-child relationship handling and streamline code structure